<resources>
    <string name="app_name">WorkTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WorkTime</string>
    <string name="nav_header_subtitle">soporte@ibao.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="lista_de_labores">Lista de Labores</string>
    <string name="separador">/</string>
    <string name="enterprise">Empresa</string>
    <string name="horas_tareadas">Horas Tareadas</string>
    <string name="trabajadores">Trabajadores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cultivo">Cultivo</string>
    <string name="fundo">Fundo</string>
    <string name="tareo_labor_name">Detalle de Labor</string>
    <string name="lista_de_trabajadores_activos">Lista de Trabajadores Activos</string>
    <string name="sin_trabajadores_activos">Sin Trabajadores Activos</string>
    <string name="sin_trabajadores_inactivos">Sin Trabajadores Inactivos</string>
    <string name="sin_editar">Sin Editar</string>
    <string name="lista_de_trabajadores_inactivos">Lista de Trabajadores Inactivos</string>
    <string name="productividad">Productividad</string>
    <string name="no_se_agreg_productividad">No se Agregó Productividad</string>
    <string name="select_tareo_activity_name">Seleccione Actividad</string>
    <string name="centro_de_costo">Centro de Costo</string>
    <string name="title_activity_tabbet">TabbetActivity</string>
    <string name="tab_text_1">Agregar</string>
    <string name="tab_text_2">Lista</string>
    <string name="ingrese_dni">Ingrese DNI</string>
    <string name="hora">Hora</string>
    <string name="lista_de_cambios">Lista de Cambios</string>
    <string name="no_se_agreg_personal">Lista vacía</string>
    <string name="lista_de_personal">Lista de Trabajadores</string>
    <string name="createTareo">Creando Labor</string>
    <string name="createTareoDirecto">Creando Labor Directa</string>
    <string name="createTareoIndirecto">Creando Labor Indirecta</string>
    <string name="createTareoAsistencia">Creando Asistencia</string>
    <string name="seleccione_tipo_Actividad">Seleccione Tipo de Labor</string>
    <string name="directo">DIRECTA</string>
    <string name="indirecto">INDIRECTA</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="labor">Labor</string>
    <string name="lote">Lote</string>
    <string name="actividad">Actividad</string>
    <string name="anhadir_productividad_grupal">Añadir Productividad Grupal</string>
    <string name="transferencia">Transferencia</string>
    <string name="salida_personal">Salida Personal</string>
    <string name="finalizar_labor">Finalizar Labor</string>
    <string name="seleccione_opcion">Seleccione una Opción</string>
    <string name="centro_de_coste">Centro de Coste</string>
    <string name="sin_elementos">Sin Elementos</string>
    <string name="sin_labores">Sin Labores</string>
    <string name="sin_lotes">Sin Lotes</string>
    <string name="sin_fundos">Sin Fundos</string>
    <string name="sin_actividades">Sin Actividades</string>
    <string name="sin_cultivos">Sin Cultivos</string>
    <string name="sin_empresas">Sin Empresas</string>
    <string name="sin_centro_contes">Sin Centro de Costes</string>
    <string name="error_complete_configuraciones">Complete todas las configuraciones</string>
    <string name="asistencia">ASISTENCIA</string>
    <string name="control_de_asistencia">CONTROL DE ASISTENCIA</string>
    <string name="error_conexion_servidor">Error conectando con el servidor</string>
    <string name="update_status">Actualizando</string>
    <string name="editar_basicos">Editar Datos</string>
    <string name="indirectas">Indirectas</string>
    <string name="directas">Directas</string>
    <string name="todas">Todas</string>
    <string name="sincronizaci_n">Sincronización</string>
    <string name="descargar_data">Descargar data</string>
    <string name="subir_data">Subir data</string>
    <string name="se_elimino_labor">Se eliminó una Labor</string>
    <string name="no_permiso_manual">No tiene permiso manual</string>
    <string name="error_trabajador_agregado_labor">Trabajador ya agregado a la Labor</string>
    <string name="error_dni_no_complete">DNI no tiene 8 digitos</string>
    <string name="error_tareo_nulo">Tareo es nulo</string>
    <string name="erro_lista_nula">lista es nula</string>
    <string name="error_hora_no_valida">Hora no válido</string>
    <string name="error_trabajador_agregado_lista">Trabajador ya agregado a la lista actual</string>
    <string name="error_trabajador_otra_labor">Trabajador en otra Labor</string>
    <string name="error_trabajador_hora_salida">Trabajador ya marco su salida</string>
    <string name="error_hora_salida_invalida">Hora de salida invalida</string>
    <string name="datos_editados_correctamente">Datos editados correctamente</string>
    <string name="desahacer">Deshacer</string>
    <string name="se_elimino_trabajador">Se eliminó un Trabajador</string>
    <string name="asistencia_min">Asistencia</string>
    <string name="existen_trabajadores_sin_salida">No se puede finalizar con trabajadores sin hora de salida</string>
</resources>
