<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardElevation="5dp"
    app:contentPadding="10dp"
    card_view:cardBackgroundColor="@color/colorIcon"
    card_view:cardUseCompatPadding="true"
    android:layout_width="fill_parent"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    android:layout_margin="@dimen/margin_starndar"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_starndar"
            android:layout_marginEnd="@dimen/margin_starndar"
            android:layout_marginTop="@dimen/margin_starndar"
            android:layout_marginBottom="@dimen/margin_starndar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_floating_button"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/fmain_item_Fundo"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fundo" />
                <TextView
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:text="@string/separador" />
                <TextView
                    android:id="@+id/fmain_item_Cultivo"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cultivo" />

            </LinearLayout>
            <TextView
                android:id="@+id/fmain_item_Labor"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="@dimen/space_floating_button"
                style="@style/tView_Tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre de la Labor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_floating_button"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic__time_black_24dp"
                    />
                <TextView
                    android:id="@+id/fmain_item_dateTime"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02/03/1992 02:35:00" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_monetization_on_black_24dp"
                    />
                <TextView
                    android:id="@+id/fmain_item_costCenter"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centro_de_coste" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_timer_black_24dp"
                        />
                    <TextView
                        android:id="@+id/fmain_item_nHoras"
                        style="@style/tView_secondaryText"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="21" />
                    <TextView
                        android:layout_marginStart="@dimen/margin_min"
                        style="@style/tView_secondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horas_tareadas" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_person_black_24dp"
                        />
                    <TextView
                        android:id="@+id/fmain_item_nTrabajadores"
                        style="@style/tView_secondaryText"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="105" />
                    <TextView
                        android:layout_marginStart="@dimen/margin_min"
                        android:textStyle="bold"
                        style="@style/tView_secondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trabajadores" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fmaini_fab"
        app:fabSize="mini"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/margin_min"
        app:srcCompat="@drawable/ic_backup_white_24dp"
        />

</androidx.cardview.widget.CardView>