<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.tareo.TareoActivity">


    <LinearLayout
        android:id="@+id/tareo_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tareo_Fundo"
                style="@style/tView_secondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fundo" />

            <TextView
                style="@style/tView_secondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginEnd="@dimen/margin_min"
                android:text="@string/separador" />

            <TextView
                android:id="@+id/tareo_Cultivo"
                style="@style/tView_secondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cultivo" />

        </LinearLayout>

        <TextView
            android:id="@+id/tareo_Labor"
            style="@style/tView_Tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de la Actividad"
            android:textColor="@color/colorPrimaryDark" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic__time_black_24dp" />

            <TextView
                android:id="@+id/tareo_dateTime"
                style="@style/tView_secondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02/03/1992 02:35:00" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_monetization_on_black_24dp" />

            <TextView
                android:id="@+id/tareo_costCenter"
                style="@style/tView_secondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Centro de Coste" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_timer_black_24dp" />

                <TextView
                    android:id="@+id/tareo_nHoras"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21"
                    android:textStyle="bold" />

                <TextView
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:text="@string/horas_tareadas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person_black_24dp" />

                <TextView
                    android:id="@+id/tareo_nTrabajadores"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="105"
                    android:textStyle="bold" />

                <TextView
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:text="@string/trabajadores"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_starndar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tareo_linearLayout"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tareo_tViewListaActivos"
                style="@style/tView_primaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_starndar"
                android:text="@string/lista_de_trabajadores_activos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tareo_clActivos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tareo_tViewListaActivos"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tareo_tViewSinActivos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_starndar"
                    android:layout_marginBottom="@dimen/margin_starndar"
                    android:text="@string/sin_trabajadores_activos"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tareo_rViewTActivos"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tareo_tViewListaFinalizados"
                style="@style/tView_primaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_starndar"
                android:text="@string/lista_de_trabajadores_inactivos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tareo_clActivos" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tareo_clFinalizados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tareo_tViewListaFinalizados"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tareo_tViewSinFinalizados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_starndar"
                    android:layout_marginBottom="@dimen/margin_starndar"
                    android:text="@string/sin_trabajadores_inactivos"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tareo_rViewTInactivos"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tareo_fabOptions"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_settings_white_24dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tareo_fabAdddTrabajador"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorPrimaryDark"
        app:rippleColor="@color/colorAccent"
        app:srcCompat="@drawable/ic_person_add_white_24dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>